<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 标题栏样式 -->

    <RelativeLayout
        android:id="@+id/repair_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/bottom_tabs_press" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/repair_title_str"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/repair_receive_tag"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="60dp" 
        android:background="@drawable/round_rim_number">

        <TextView
            android:id="@+id/repair_receive_tag_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="5"
           android:textColor="#FFFFFF"/>
    </RelativeLayout>
    
    
    <LinearLayout
        android:id="@+id/appoint"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/repair_fragment_title"
        android:background="@color/repair_roll_tile"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/other_appoint"
            style="@style/zero_widthwrapcontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/other_appoint_str"
            android:textColor="@color/bottom_tabs_press"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/oneself_appoint"
            style="@style/zero_widthwrapcontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/oneself_appoint_str"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
    
	
    <LinearLayout
        android:id="@+id/slide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appoint"
        android:background="@color/repair_roll_tile"
        android:orientation="horizontal" >
        
        <View
            android:id="@+id/slide_other_appoint"
            style="@style/zero_widthwrapcontent"
            android:layout_height="5dp"
            android:layout_gravity="bottom" 
            android:background="@drawable/slide_view"/>

        <View
            android:id="@+id/slide_oneself_appoint"
            style="@style/zero_widthwrapcontent"
            android:layout_height="5dp"
            android:layout_gravity="bottom"/>

    </LinearLayout>
   
    <FrameLayout
        android:id="@+id/viewpager_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@id/slide"
        android:layout_marginTop="6dp" >

    </FrameLayout>

</RelativeLayout>